--- a/pinpoint-agent/.env
+++ b/pinpoint-agent/.env
@@ -9,7 +9,7 @@ PINPOINT_AGENT_NAME=pinpoint-agent
 PROFILER_TRANSPORT_MODULE=GRPC
 
 #collector information required
-COLLECTOR_IP=
+COLLECTOR_IP=172.20.0.7
 PROFILER_TRANSPORT_AGENT_COLLECTOR_PORT=9991
 PROFILER_TRANSPORT_METADATA_COLLECTOR_PORT=9991
 PROFILER_TRANSPORT_STAT_COLLECTOR_PORT=9992
