--- a/pinpoint-quickstart/.env
+++ b/pinpoint-quickstart/.env
@@ -6,7 +6,7 @@ SPRING_PROFILES=release
 PINPOINT_AGENT_NAME=pinpoint-agent
 
 #collector information required
-COLLECTOR_IP=
+COLLECTOR_IP=172.20.0.7
 PROFILER_TRANSPORT_AGENT_COLLECTOR_PORT=9991
 PROFILER_TRANSPORT_METADATA_COLLECTOR_PORT=9991
 PROFILER_TRANSPORT_STAT_COLLECTOR_PORT=9992
