--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,52 +151,52 @@ services:
       - FLINK_CLUSTER_ENABLE=${FLINK_CLUSTER_ENABLE}
       - FLINK_CLUSTER_ZOOKEEPER_ADDRESS=${FLINK_CLUSTER_ZOOKEEPER_ADDRESS}
 
-  pinpoint-quickstart:
-    build:
-      context: ./pinpoint-quickstart/
-      dockerfile: Dockerfile
-
-    container_name: "pinpoint-quickstart"
-    image: "pinpointdocker/pinpoint-quickstart"
-    ports:
-      - "${APP_PORT:-8080}:8080"
-    volumes:
-      - data-volume:/pinpoint-agent
-    environment:
-      JAVA_OPTS: "-javaagent:/pinpoint-agent/pinpoint-bootstrap-${PINPOINT_VERSION}.jar -Dpinpoint.agentId=${AGENT_ID} -Dpinpoint.applicationName=${APP_NAME} -Dpinpoint.profiler.profiles.active=${SPRING_PROFILES}"
-    networks:
-      - pinpoint
-    depends_on:
-      - pinpoint-agent
-
-  pinpoint-agent:
-    build:
-      context: ./pinpoint-agent/
-      dockerfile: Dockerfile
-      args:
-        - PINPOINT_VERSION=${PINPOINT_VERSION}
-
-    container_name: "${PINPOINT_AGENT_NAME}"
-    image: "pinpointdocker/pinpoint-agent:${PINPOINT_VERSION}"
-
-    restart: unless-stopped
-
-    networks:
-      - pinpoint
-    volumes:
-      - data-volume:/pinpoint-agent
-    environment:
-      - SPRING_PROFILES=${SPRING_PROFILES}
-      - COLLECTOR_IP=${COLLECTOR_IP}
-      - PROFILER_TRANSPORT_AGENT_COLLECTOR_PORT=${PROFILER_TRANSPORT_AGENT_COLLECTOR_PORT}
-      - PROFILER_TRANSPORT_METADATA_COLLECTOR_PORT=${PROFILER_TRANSPORT_METADATA_COLLECTOR_PORT}
-      - PROFILER_TRANSPORT_STAT_COLLECTOR_PORT=${PROFILER_TRANSPORT_STAT_COLLECTOR_PORT}
-      - PROFILER_TRANSPORT_SPAN_COLLECTOR_PORT=${PROFILER_TRANSPORT_SPAN_COLLECTOR_PORT}
-      - PROFILER_SAMPLING_RATE=${PROFILER_SAMPLING_RATE}
-      - DEBUG_LEVEL=${AGENT_DEBUG_LEVEL}
-      - PROFILER_TRANSPORT_MODULE=${PROFILER_TRANSPORT_MODULE}
-    depends_on:
-      - pinpoint-collector
+#  pinpoint-quickstart:
+#    build:
+#      context: ./pinpoint-quickstart/
+#      dockerfile: Dockerfile
+#
+#    container_name: "pinpoint-quickstart"
+#    image: "pinpointdocker/pinpoint-quickstart"
+#    ports:
+#      - "${APP_PORT:-8080}:8080"
+#    volumes:
+#      - data-volume:/pinpoint-agent
+#    environment:
+#      JAVA_OPTS: "-javaagent:/pinpoint-agent/pinpoint-bootstrap-${PINPOINT_VERSION}.jar -Dpinpoint.agentId=${AGENT_ID} -Dpinpoint.applicationName=${APP_NAME} -Dpinpoint.profiler.profiles.active=${SPRING_PROFILES}"
+#    networks:
+#      - pinpoint
+#    depends_on:
+#      - pinpoint-agent
+#
+#  pinpoint-agent:
+#    build:
+#      context: ./pinpoint-agent/
+#      dockerfile: Dockerfile
+#      args:
+#        - PINPOINT_VERSION=${PINPOINT_VERSION}
+#
+#    container_name: "${PINPOINT_AGENT_NAME}"
+#    image: "pinpointdocker/pinpoint-agent:${PINPOINT_VERSION}"
+#
+#    restart: unless-stopped
+#
+#    networks:
+#      - pinpoint
+#    volumes:
+#      - data-volume:/pinpoint-agent
+#    environment:
+#      - SPRING_PROFILES=${SPRING_PROFILES}
+#      - COLLECTOR_IP=${COLLECTOR_IP}
+#      - PROFILER_TRANSPORT_AGENT_COLLECTOR_PORT=${PROFILER_TRANSPORT_AGENT_COLLECTOR_PORT}
+#      - PROFILER_TRANSPORT_METADATA_COLLECTOR_PORT=${PROFILER_TRANSPORT_METADATA_COLLECTOR_PORT}
+#      - PROFILER_TRANSPORT_STAT_COLLECTOR_PORT=${PROFILER_TRANSPORT_STAT_COLLECTOR_PORT}
+#      - PROFILER_TRANSPORT_SPAN_COLLECTOR_PORT=${PROFILER_TRANSPORT_SPAN_COLLECTOR_PORT}
+#      - PROFILER_SAMPLING_RATE=${PROFILER_SAMPLING_RATE}
+#      - DEBUG_LEVEL=${AGENT_DEBUG_LEVEL}
+#      - PROFILER_TRANSPORT_MODULE=${PROFILER_TRANSPORT_MODULE}
+#    depends_on:
+#      - pinpoint-collector
 
   #zookeepers
   zoo1:
